--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -1407,7 +1407,9 @@ Bathrooms are an important services for museum visitors. Surprisingly, the place
 
 
 \section{Application of CRR for Museum Design}
-This section presents the application of the CRR for validating art museum design requirements using real world scenarios. The first part of this section introduces the museums that will be used in the case study and gives a brief overview of process of importing them into the CRR. The second part of this section presents the results of applying the museum design requirements identified above to these museums.
+This section presents the application of the CRR to two real world museums using the requirements identified above. This section is organized as follows. The first part introduces the two museums that are used in the case study and briefly describes the process of importing these museums into the CRR from ArchiCAD. The second part presents the results of applying the CRR to the museums to detect violations with regards to the museum design requirements. 
+
+%for validating art museum design requirements using real world scenarios. The first part of this section introduces the museums that will be used in the case study and gives a brief overview of process of importing them into the CRR. The second part of this section presents the results of applying the museum design requirements identified above to these museums.
 
 %This use case is from the perspective of a museum designer and covers the process of importing a museums design from an architectural design tool (ArchiCAD) into the CRR, the building of museum requirements using architectural concepts and QSA, and finally validation of the requirements using the CRR query engine. 
 
